--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,6 @@
   </head>
   <body> 
     <div>hello, world!</div>
-      @@include('templates/header.html') 
+      <header class="header">main</header> 
   </body>
 </html>
