--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
   </head>
   <body> 
-    <div>hello, world!</div>
+    <p>Вот новый параграф</p>
+    
+    <div>1</div>
+    <div>2</div>
       <header class="header">main</header> 
+      //= blocks/footer.html
   </body>
 </html>
